tests/snapshots/opendbc/generator/honda/_bosch_standstill.snap
---
source: tests/snapshots.rs
---
version: ""
bit_timing: ~
messages:
  - id:
      Standard: 432
    name: STANDSTILL
    size: 7
    transmitter:
      NodeName: VSA
    signals:
      - name: CONTROLLED_STANDSTILL
        multiplexer_indicator: Plain
        start_bit: 0
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - EON
      - name: WHEELS_MOVING
        multiplexer_indicator: Plain
        start_bit: 12
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - EON
      - name: BRAKE_ERROR_1
        multiplexer_indicator: Plain
        start_bit: 11
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - EON
      - name: BRAKE_ERROR_2
        multiplexer_indicator: Plain
        start_bit: 9
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - EON
      - name: COUNTER
        multiplexer_indicator: Plain
        start_bit: 53
        size: 2
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 3
        unit: ""
        receivers:
          - EON
      - name: CHECKSUM
        multiplexer_indicator: Plain
        start_bit: 51
        size: 4
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 3
        unit: ""
        receivers:
          - EON
