tests/snapshots/opendbc/generator/honda/_community.snap
---
source: tests/snapshots.rs
---
version: ""
bit_timing: ~
messages:
  - id:
      Standard: 512
    name: GAS_COMMAND
    size: 6
    transmitter:
      NodeName: EON
    signals:
      - name: GAS_COMMAND
        multiplexer_indicator: Plain
        start_bit: 7
        size: 16
        byte_order: BigEndian
        value_type: Unsigned
        factor: 0.253984064
        offset: -83.3
        min: 0
        max: 1
        unit: ""
        receivers:
          - INTERCEPTOR
      - name: GAS_COMMAND2
        multiplexer_indicator: Plain
        start_bit: 23
        size: 16
        byte_order: BigEndian
        value_type: Unsigned
        factor: 0.126992032
        offset: -83.3
        min: 0
        max: 1
        unit: ""
        receivers:
          - INTERCEPTOR
      - name: ENABLE
        multiplexer_indicator: Plain
        start_bit: 39
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - INTERCEPTOR
      - name: COUNTER_PEDAL
        multiplexer_indicator: Plain
        start_bit: 35
        size: 4
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 15
        unit: ""
        receivers:
          - INTERCEPTOR
      - name: CHECKSUM_PEDAL
        multiplexer_indicator: Plain
        start_bit: 47
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 255
        unit: ""
        receivers:
          - INTERCEPTOR
  - id:
      Standard: 513
    name: GAS_SENSOR
    size: 6
    transmitter:
      NodeName: INTERCEPTOR
    signals:
      - name: INTERCEPTOR_GAS
        multiplexer_indicator: Plain
        start_bit: 7
        size: 16
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - EON
      - name: INTERCEPTOR_GAS2
        multiplexer_indicator: Plain
        start_bit: 23
        size: 16
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - EON
      - name: STATE
        multiplexer_indicator: Plain
        start_bit: 39
        size: 4
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 15
        unit: ""
        receivers:
          - EON
      - name: COUNTER_PEDAL
        multiplexer_indicator: Plain
        start_bit: 35
        size: 4
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 15
        unit: ""
        receivers:
          - EON
      - name: CHECKSUM_PEDAL
        multiplexer_indicator: Plain
        start_bit: 47
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 255
        unit: ""
        receivers:
          - EON
value_descriptions:
  - Signal:
      message_id:
        Standard: 513
      name: STATE
      value_descriptions:
        - id: 5
          description: FAULT_TIMEOUT
        - id: 4
          description: FAULT_STARTUP
        - id: 3
          description: FAULT_SCE
        - id: 2
          description: FAULT_SEND
        - id: 1
          description: FAULT_BAD_CHECKSUM
        - id: 0
          description: NO_FAULT
