tests/snapshots/opendbc/generator/honda/_lkas_hud_5byte.snap
---
source: tests/snapshots.rs
---
version: ""
bit_timing: ~
messages:
  - id:
      Standard: 829
    name: LKAS_HUD
    size: 5
    transmitter:
      NodeName: ADAS
    signals:
      - name: LKAS_READY
        multiplexer_indicator: Plain
        start_bit: 0
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 127
        unit: ""
        receivers:
          - BDY
      - name: LKAS_STATE_CHANGE
        multiplexer_indicator: Plain
        start_bit: 6
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: CAM_TEMP_HIGH
        multiplexer_indicator: Plain
        start_bit: 7
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 255
        unit: ""
        receivers:
          - BDY
      - name: DASHED_LANES
        multiplexer_indicator: Plain
        start_bit: 14
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - BDY
      - name: DTC
        multiplexer_indicator: Plain
        start_bit: 13
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - BDY
      - name: LKAS_PROBLEM
        multiplexer_indicator: Plain
        start_bit: 12
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - BDY
      - name: LKAS_OFF
        multiplexer_indicator: Plain
        start_bit: 11
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - BDY
      - name: SOLID_LANES
        multiplexer_indicator: Plain
        start_bit: 10
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - BDY
      - name: CLEAN_WINDSHIELD
        multiplexer_indicator: Plain
        start_bit: 26
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - BDY
      - name: STEERING_REQUIRED
        multiplexer_indicator: Plain
        start_bit: 8
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - BDY
      - name: BEEP
        multiplexer_indicator: Plain
        start_bit: 17
        size: 2
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - BDY
      - name: RDM_PROBLEM
        multiplexer_indicator: Plain
        start_bit: 21
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - BDY
      - name: RDM_HUD
        multiplexer_indicator: Plain
        start_bit: 9
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - BDY
      - name: RDM_HUD_2
        multiplexer_indicator: Plain
        start_bit: 23
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: RDM_OFF
        multiplexer_indicator: Plain
        start_bit: 27
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - BDY
      - name: RDM_ON
        multiplexer_indicator: Plain
        start_bit: 20
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: RDM_ON_2
        multiplexer_indicator: Plain
        start_bit: 28
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - BDY
      - name: LANE_ASSIST_BEEP_OFF
        multiplexer_indicator: Plain
        start_bit: 30
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: CHECKSUM
        multiplexer_indicator: Plain
        start_bit: 35
        size: 4
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 15
        unit: ""
        receivers:
          - BDY
      - name: COUNTER
        multiplexer_indicator: Plain
        start_bit: 37
        size: 2
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 3
        unit: ""
        receivers:
          - BDY
comments:
  - Signal:
      message_id:
        Standard: 829
      name: BEEP
      comment: "beeps are pleasant, chimes are for warnings etc..."
  - Signal:
      message_id:
        Standard: 829
      name: CAM_TEMP_HIGH
      comment: "Some Driver Assist Systems Cannot Operate: Camera Temperature Too High"
  - Signal:
      message_id:
        Standard: 829
      name: CAMERA_OVERHEAT
      comment: "Lane Keeping Assist Cannot Operate: Camera Too Hot"
value_descriptions:
  - Signal:
      message_id:
        Standard: 829
      name: BEEP
      value_descriptions:
        - id: 5
          description: solid_beep
        - id: 4
          description: double_beep
        - id: 3
          description: single_beep
        - id: 2
          description: triple_beep
        - id: 1
          description: repeated_beep
        - id: 0
          description: no_beep
